style.css
/* ... */
.archive .main.container-fluid > *,
.single .main.container-fluid > *,
.search .main.container-fluid > * {
	margin: 0 auto;
}

/* Small devices (tablets, 768px and up) */
@media only screen and (min-width: 768px) {
	.entry-content {
		margin-top: 30%;
	}
	.archive .main.container-fluid > *,
	.single .main.container-fluid > *,
	.search .main.container-fluid > * {
		width: 750px;
	}
}

/* Medium devices (desktops, 992px and up) */
@media only screen and (min-width: 992px) {
	.entry-content {
		margin-top: 12%;
	}
	.archive .main.container-fluid > *,
	.single .main.container-fluid > *,
	.search .main.container-fluid > * {
		width: 970px;
	}
}

/* Large devices (large desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
	.archive .main.container-fluid > *,
	.single .main.container-fluid > *,
	.search .main.container-fluid > * {
		width: 1170px;
	}
}

.single .main,
.archive .main {
	margin-top: 3em;
}
.blog .entry-title,
.single .entry-title {
	padding: 0;
}
.blog .entry-content,
.single .entry-content,
.archive .entry-content {
	margin-top: 0;
}
.blog .entry-meta,
.blog .entry-footer {
	text-align: center;
}
.blog .entry-meta {
	padding-top: 10px;
}
.blog .container-fluid .boldgrid-section {
	margin-right: 0;
	margin-left: 0;
}

/*-----------------------------------------------
## Typography
-----------------------------------------------*/
.entry-title,
.mod-beta h2 {
	font-weight: bold;
}
.mod-alpha h2 {
	line-height: normal;
}
a:hover,
a:focus,
.site-footer a {
	text-decoration: underline;
}
a,
.button-primary:hover,
.button-primary:focus,
.button-primary:active,
.open > .dropdown-toggle.btn-primary,
.button-secondary:hover,
.button-secondary:active,
.site-footer a:hover,
.site-footer a:focus {
	text-decoration: none;
}
.site-title,
.site-description,
.call-to-action,
.entry-title,
.navbar-nav > li > a,
.navbar-default .navbar-nav .open .dropdown-menu > li > a,
#secondary-menu,
#tertiary-menu,
.menu-social,
.icon,
.heading p,
.site-footer,
.xs-center,
.mod-img,
.mod-img-circle,
.p-button-primary,
.p-button-secondary {
	text-align: center;
}
.cat-item,
.archive .entry-title,
.menu-item-object-page,
#footer-widget-area {
	text-align: left;
}

/* Small devices (tablets, 768px and up) */
@media only screen and (min-width: 768px) {
	.site-title,
	.site-description,
	#menu-social-media li a,
	.navbar-default .navbar-nav .open .dropdown-menu > li > a {
		text-align: left;
	}
	.menu-social,
	.navbar-nav > li > a {
		text-align: right;
	}
}

/* Medium devices (desktops, 992px and up) */
@media only screen and (min-width: 992px) {
	.xs-center,
	.mod-img,
	.mod-img-circle,
	.gridblock .p-button-primary,
	.gridblock .p-button-secondary,
	.single .entry-title {
		text-align: left;
	}
}

/*-----------------------------------------------
## Titles
-----------------------------------------------*/
.page-template-page_home .entry-title {
	display: none;
}
.page-template-default .entry-content {
	margin-top: 0;
}
.hentry {
	margin: 0 auto;
}
.hentry:first-child ~ .hentry {
	margin-top: 50px;
}

/* Headings */
.heading h3 {
	margin-top: 10px;
}
.heading {
	margin-bottom: 15px;
}

/* Extra small devices (phones, less than 768px) */
.entry-title {
	padding-bottom: 1.5em;
}
.entry-title a,
.entry-title a:hover,
.entry-title a:focus {
	color: #fff;
	text-decoration: none;
	text-shadow: 0.1em 0.1em 0.05em #333;
}
.archive .entry-title {
	margin-top: 0;
	padding-top: 25px;
	padding-bottom: 15px;
	text-shadow: none;
}

/* Small devices (tablets, 768px and up) */
@media only screen and (min-width: 768px) {
	.entry-title {
		padding-top: 1em;
		padding-bottom: 3em;
	}
	.archive .entry-title,
	.single .entry-title {
		margin-left: -15px;
	}
}

/* Medium devices (desktops, 992px and up) */
@media only screen and (min-width: 992px) {
	.entry-title,
	.entry-title a {
		padding-top: 1.5em;
		padding-bottom: 2.5em;
	}
}

/*-----------------------------------------------
## Buttons
-----------------------------------------------*/
.button-primary,
.button-secondary {
	margin: 10px 0;
	padding: 10px 25px;
	background: none;
	transition: all .5s ease 0s;
}

/* Positioning */
.p-button-primary,
.p-button-secondary,
.gridblock .p-button-primary {
	margin: 30px 0;
}
.gridblock .p-button-secondary {
	margin: 0;
}

/* Call to Action */
.call-to-action .button-primary {
	margin: 25px 0 0;
	padding: 20px 25px;
	transition: all .5s;
}

/* Block vs. Inline */
.button-primary,
.button-secondary {
	display: block;
	margin-top: 15px;
}

/* Small devices (tablets, 768px and up) */
@media only screen and (min-width: 768px) {
	.button-primary,
	.button-secondary {
		display: inline;
		margin-top: 0;
	}
	.gridblock .p-button-secondary {
		margin: 30px 0;
	}
}

/*-----------------------------------------------
## Et Cetera
-----------------------------------------------*/
hr {
	margin: 65px 0 50px;
}
.table-striped > tbody > tr:nth-of-type(2n+1),
.pager li > a {
	background: transparent;
}
input,
select {
	color: #333;
}

/*------------------------------------------------------------------------
# Header
------------------------------------------------------------------------*/
.site-header {
	/* Box Shadow */
	-webkit-box-shadow: 0 3px 8px 2px rgba(38, 38, 38, 0.5);
	-moz-box-shadow: 0 3px 8px 2px rgba(38, 38, 38, 0.5);
	box-shadow: 0 3px 8px 2px rgba(38, 38, 38, 0.5);
}

/* Sticky Header Scroll */
.site-header {
	z-index: 99;
}
.smaller {
	transition: all .3s;
}

/* Call to Action */
.call-to-action {
	margin-bottom: 40px;
	padding-top: 60px;
}
.page-template-default .call-to-action,
.page-template-page_home .header-title {
	display: none;
}

/* Extra small devices (phones, less than 768px) */
.site-title {
	padding-top: 20px;
}
.site-description {
	margin-top: -20px;
	margin-left: 2px;
	padding-top: 10px;
}
/* ... */

